fix wordwrap

--- a/static/css/base-page-style.css
+++ b/static/css/base-page-style.css
@@ -146,6 +146,9 @@ body {
     width:520px
 
 }
+.green-community{
+    width:570px !important;
+}
 .green .btns{
     background-color: rgb(0, 93, 255); 
 }
